# 3cm-rpg

./: .gitignore  Main.py  README.md  classes.json  main.py  pontuacao.txt  pyproject.toml  requirements.txt
Armazenamento/: CRUD.py  Embeds3cm.py
Armazenamento/DB Arquives/: 3cm Rpg.drawio  Create Database.txt
Assets/: pontuacao_model.txt
Scripts/: Dice.py  MasterTable.py  Player.py
Scripts/Cogs/: Dice.py  MasterTable.py  Player.py
Scripts/Database/: CRUD.py
Scripts/Embeds/: Embeds3cm.py  HelpEmbeds.py  PlayerEmbeds.py
Scripts/Models/: Atribute.py
Scripts/Utils/: UtilsFunctions.py
json Data Base/: classes.json  pontuacao.txt  skills.json
